Do mask the upper 16 bits, when sanity checking fs/gs register values. Fix my own PR/43842.